send ticket also to subscription buyer